test/fixtures/errors/throw_in_eval_named.snapshot
evalscript.js:*
  throw new Error('error in named script');
  ^

Error: error in named script
    at eval (evalscript.js:*:*)

Node.js *
